[package]
name = "kvs"
version = "0.1.0"
authors = ["Roshan Giyanani <roshangiyanani@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
clap = "2.33.0"
strum = "0.15.0"
strum_macros = "0.15.0"
