[package]
name = "kvs"
version = "0.1.0"
authors = ["Roshan Giyanani <roshangiyanani@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros = "0.15.0"
structopt = "0.2.18"
strum = "0.15.0"
serde = "1.0.98"
serde_json = "1.0.40"
failure = "0.1.5"
bincode = "1.1.4"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
tempfile = "3.0.7"
walkdir = "2.2.7"
