[package]
name = "cli"
version = "0.1.0"
authors = ["Roshan Giyanani <roshangiyanani@gmail.com>"]
description = "A cli to key-value stores"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
hashmap_kvs = { path = "../hashmap_kvs" }
log_kvs = { path = "../log_kvs" }
strum = "0.15.0"
strum_macros = "0.15.0"
structopt = "0.3.0"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
tempfile = "3.1.0"
