[package]
name = "core"
version = "0.1.0"
authors = ["Roshan Giyanani <roshangiyanani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# Implementation tests are implementated as a feature because 
# "cfg(test)" doesn't cross crate boundaries.
impl-tests = ["tempfile"]

[dependencies]
failure = "0.1.5"
serde_json = "1.0.40"
bincode = "1.1.4"

# Dependency for impl-tests feature
tempfile = { version = "3.1.0", optional = true }
