[package]
name = "hashmap_kvs"
version = "0.1.0"
authors = ["Roshan Giyanani <roshangiyanani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
io = { path = "../io" }
serde_json = "1.0.40"

[dev-dependencies]
tempfile = "3.1.0"
