[package]
name = "log_kvs"
version = "0.1.0"
authors = ["Roshan Giyanani <roshangiyanani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
io = { path = "../io" }
serde = { version = "1.0.99", features = ["derive"] }
strum_macros = "0.15.0"
bincode = "1.1.4"

[dev-dependencies]
walkdir = "2.2.9"
tempfile = "3.1.0"
